feat : create sensor category
